<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
    <TextView
        android:text="@string/labelFullName"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:id="@+id/labelUserName" />
    <EditText
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#0099FF"
        android:hint="@string/labelFullName"
        android:gravity="center"
        android:textColorHint="#cccccc"
        android:layout_below="@id/labelUserName"
        android:id="@+id/inputFullName" />
    <TextView
        android:text="@string/labelAddress"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@id/inputFullName"
        android:textColor="@android:color/black"
        android:id="@+id/labelAddress" />
    <EditText
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#0099FF"
        android:hint="@string/labelAddress"
        android:textColorHint="#cccccc"
        android:gravity="center"
        android:layout_below="@id/labelAddress"
        android:id="@+id/inputAddress" />
    <TextView
        android:text="@string/label_city"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@id/inputFullName"
        android:textColor="@android:color/black"
        android:id="@+id/labelCity" />
    <EditText
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#0099FF"
        android:hint="@string/label_city"
        android:textColorHint="#cccccc"
        android:gravity="center"
        android:layout_below="@id/labelCity"
        android:id="@+id/inputCity" />
    <TextView
        android:text="@string/label_zip"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@id/inputCity"
        android:textColor="@android:color/black"
        android:id="@+id/labelZip" />
    <EditText
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#0099FF"
        android:hint="@string/label_zip"
        android:textColorHint="#cccccc"
        android:gravity="center"
        android:layout_below="@id/labelZip"
        android:id="@+id/inputZip" />
    <TextView
        android:text="@string/labelPhone"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@id/inputZip"
        android:textColor="@android:color/black"
        android:id="@+id/labelPhone" />
    <EditText
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#0099FF"
        android:hint="@string/labelPhone"
        android:textColorHint="#cccccc"
        android:gravity="center"
        android:layout_below="@id/labelPhone"
        android:id="@+id/inputPhone" />
    <Button
        android:text="Edit"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background"
        android:layout_gravity="center"
        android:textSize="18dp"
        android:textColor="#ffffff"
        android:paddingLeft="25dip"
        android:paddingRight="25dip"
        android:id="@+id/buttonEdit" />
    <Button
        android:text="Change password"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background"
        android:layout_gravity="center"
        android:textSize="15dp"
        android:textColor="#ffffff"
        android:paddingLeft="25dip"
        android:paddingRight="25dip"
        android:id="@+id/buttonChange" />
    </LinearLayout>
</ScrollView>