<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">
    <ImageView
        android:src="@drawable/login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY" />
    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/login_logo" />
    <RelativeLayout
        android:id="@+id/input_background"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/input_background"
        android:layout_below="@id/login_logo"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/email_icon" />
            <EditText
                android:inputType="textPersonName"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/hint_email"
                android:textColor="@android:color/white"
                android:background="@android:color/transparent"
                android:textColorHint="@android:color/white"
                android:textStyle="italic"
                android:id="@+id/inputUserName" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/email_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/password_icon" />
            <EditText
                android:inputType="textPassword"
                android:layout_marginLeft="10dp"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white"
                android:hint="***********"
                android:textStyle="italic"
                android:textColorHint="@android:color/white"
                android:id="@+id/inputPassword" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/input_background"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:orientation="horizontal">
        <Button
            android:layout_marginTop="10dp"
            android:text="@string/buttonRegister"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/reg_background"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_weight="1"
            android:visibility="invisible"
            android:id="@+id/buttonRegister" />
        <Button
            android:layout_marginTop="10dp"
            android:text="@string/buttonLogin"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/log_background"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_weight="1"
            android:id="@+id/buttonLogin"
            android:onClick="clickLogin"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/options"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_below="@id/buttons"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/keep_logged_in"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="remeberMeClick">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:gravity="center_vertical"
                android:src="@drawable/keep_login" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:text="@string/keep_logged_in"
                android:gravity="center_vertical"
                android:textColor="@android:color/white" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/forgot_password"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:onClick="recover">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:gravity="center_vertical"
                android:src="@drawable/question_mark" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/forgot_password"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/login_corner_logo" />
    <TextView
        android:text="@string/copyright"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="6sp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />
</RelativeLayout>