<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:src="@drawable/login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY" />
    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/login_logo" />
    <RelativeLayout
        android:id="@+id/input_background"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/input_background"
        android:layout_below="@id/login_logo"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="@id/input_background"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/email_icon" />
            <EditText
                android:inputType="textPersonName"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/hint_email"
                android:textColor="@android:color/white"
                android:textStyle="italic"
                android:background="@android:color/transparent"
                android:textColorHint="@android:color/white"
                android:id="@+id/inputUserName" />
        </LinearLayout>
    </RelativeLayout>
    <Button
        android:layout_marginTop="10dp"
        android:text="@string/button_send"
        android:layout_below="@id/input_background"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/log_background"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:id="@+id/buttonSend"
        android:onClick="buttonClick"/>
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/login_corner_logo" />
    <TextView
        android:text="@string/copyright"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="6sp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />
</RelativeLayout>